--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a class="weatherwidget-io" href="https://forecast7.com/es/22d16n100d99/san-luis-potosi/" data-label_1="SAN LUIS POTOSÍ" data-label_2="WEATHER" data-theme="gray" >SAN LUIS POTOSÍ WEATHER</a>
+<a class="weatherwidget-io" href="https://forecast7.com/es/22d16n100d99/san-luis-potosi/" data-label_1="San Luis Potosí" data-label_2="Weather" data-theme="pure" >San Luis Potosí Weather</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
